--- a/src.API/src.API.csproj
+++ b/src.API/src.API.csproj
@@ -177,7 +177,6 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\TodoesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -196,9 +195,7 @@
       <Name>src.Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="ApplicationInsights.config" />
     <Content Include="Global.asax" />
