--- a/src.Models/packages.config
+++ b/src.Models/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="editorconfig" version="0.12.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.ComponentModel.Annotations" version="4.3.0" targetFramework="net452" />
   <package id="TypeLite" version="1.8.1" targetFramework="net452" />
   <package id="TypeLite.Lib" version="1.8.1" targetFramework="net452" />
